# src/modules/cars/useCases/listSpecifications/ListSpecificationsController.ts
@@ -1,12 +1,12 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import ListSpecificationsUseCase from "./ListSpecificationsUseCase";
 
 class ListSpecificationsController {
-  constructor(private listSpecificationsUseCase: ListSpecificationsUseCase) {}
-
-  handle(request: Request, response: Response): Response {
-    const specifications = this.listSpecificationsUseCase.execute();
+  async handle(request: Request, response: Response): Promise<Response> {
+    const listSpecificationsUseCase = container.resolve(ListSpecificationsUseCase);
+    const specifications = await listSpecificationsUseCase.execute();
     return response.status(200).json(specifications);
   }
 }
